# Portpal

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml  portable-build.yml
assets/: portmap-demo.html
src/: App.css  App.tsx  PortMap.css  PortMap.tsx  index.css
src-tauri/: Cargo.toml  err.txt  err2.txt  err3.txt  err4.txt  errors.txt  tauri.conf.json
src-tauri/src/: connections.rs  logger.rs  main.rs  scanner.rs  tray.rs
